TodoApp type definition refactoring

--- a/Skclusive.Blazor.TodoApp/TodoApp.Client/wwwroot/index.html
+++ b/Skclusive.Blazor.TodoApp/TodoApp.Client/wwwroot/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <footer class="info">
-        <p>Click to edit a todo. There is focus issue.</p>
+        <p>Click to edit a todo.</p>
         <p>Created by <a href="http://twitter.com/skclusive">Skclusive</a>; <a href="https://github.com/skclusive/Skclusive.Mobx.StateTree/tree/master/samples/Skclusive.Blazor.TodoApp">Check the sources for this project on GitHub</a></p>
     </footer>
 
