--- a/Skclusive.Blazor.Material/Material.Browser.Host/wwwroot/index.html
+++ b/Skclusive.Blazor.Material/Material.Browser.Host/wwwroot/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>Skclusive.Blazor.Material.Browser.Host</title>
     <base href="/" />
+    <style data-blazorstyled-name="0" data-blazorstyled-priority="0"></style>
  </head>
 
 <body>
