--- a/Skclusive.Blazor.Dashboard/Dashboard.Browser.Host/wwwroot/index.html
+++ b/Skclusive.Blazor.Dashboard/Dashboard.Browser.Host/wwwroot/index.html
@@ -9,7 +9,9 @@
  </head>
 
 <body>
-    <app>Loading...</app>
+    <div id="app">
+        <!--Blazor:{"type":"webassembly","assembly":"Skclusive.Blazor.Dashboard.App.View","typeName":"Skclusive.Blazor.Dashboard.App.View.DashboardView","parameterDefinitions":"W10=","parameterValues":"W10="}-->
+    </div>
 
     <script src="_framework/blazor.webassembly.js"></script>
 
