--- a/Skclusive.Blazor.Material/Material.Browser.Host/wwwroot/index.html
+++ b/Skclusive.Blazor.Material/Material.Browser.Host/wwwroot/index.html
@@ -10,7 +10,9 @@
  </head>
 
 <body>
-    <app>Loading...</app>
+    <div id="app">
+        <!--Blazor:{"type":"webassembly","assembly":"Skclusive.Blazor.Material.App.View","typeName":"Skclusive.Blazor.Material.App.View.AppView","parameterDefinitions":"W10=","parameterValues":"W10="}-->
+    </div>
 
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
