--- a/Skclusive.Blazor.StateTree/StateTree.Browser.Host/wwwroot/index.html
+++ b/Skclusive.Blazor.StateTree/StateTree.Browser.Host/wwwroot/index.html
@@ -10,7 +10,7 @@
  </head>
 
 <body>
-    <app>Loading...</app>
+    <div id="app">Loading...</div>
 
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
