--- a/FlightFinder/index.html
+++ b/FlightFinder/index.html
@@ -9,7 +9,7 @@
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-	<app>Loading...</app>
+	<div id="app">Loading...</div>
 
 	<script src="_framework/blazor.webassembly.js"></script>
 </body>
