package changes updated

--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="app">
-        <!--Blazor:{"type":"webassembly","assembly":"Skclusive.Blazor.Dashboard.App.View","typeName":"Skclusive.Blazor.Dashboard.App.View.DashboardView","parameterDefinitions":"W10=","parameterValues":"W10="}-->
+        <!--Blazor:{"type":"webassembly","assembly":"Skclusive.Dashboard.App.View","typeName":"Skclusive.Dashboard.App.View.DashboardView","parameterDefinitions":"W10=","parameterValues":"W10="}-->
     </div>
 
     <script src="_framework/blazor.webassembly.js"></script>
