--- a/Material/index.html
+++ b/Material/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="app">
-        <!--Blazor:{"type":"webassembly","assembly":"Skclusive.Blazor.Material.App.View","typeName":"Skclusive.Blazor.Material.App.View.AppView","parameterDefinitions":"W10=","parameterValues":"W10="}-->
+        <!--Blazor:{"type":"webassembly","assembly":"Skclusive.Material.App.View","typeName":"Skclusive.Material.App.View.AppView","parameterDefinitions":"W10=","parameterValues":"W10="}-->
     </div>
 
     <script src="_framework/blazor.webassembly.js"></script>
