--- a/Messenger/index.html
+++ b/Messenger/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="app">
-        <!--Blazor:{"type":"webassembly","assembly":"Skclusive.Blazor.Messenger.App.View","typeName":"Skclusive.Blazor.Messenger.App.View.MessengerView","parameterDefinitions":"W10=","parameterValues":"W10="}-->
+        <!--Blazor:{"type":"webassembly","assembly":"Skclusive.Messenger.App.View","typeName":"Skclusive.Messenger.App.View.MessengerView","parameterDefinitions":"W10=","parameterValues":"W10="}-->
     </div>
 
     <script src="_framework/blazor.webassembly.js"></script>
